Test Créa Fichier

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,10 @@ project(ProjetLp C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(ProjetLp main.c)
+add_executable(ProjetLp main.c
+        manager.c
+        manager.h
+        ui.c
+        ui.h
+        process.c
+        process.h)
